[gd_scene load_steps=3 format=3 uid="uid://dbcolre328udo"]

[ext_resource type="Script" path="res://newmqtt.gd" id="2"]
[ext_resource type="Script" path="res://Control.gd" id="3"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 0.46
anchor_bottom = 0.265
offset_left = 1.0
offset_right = -0.0400085
offset_bottom = -1.52588e-05
script = ExtResource("3")

[node name="mqttnode" type="Node" parent="."]
script = ExtResource("2")

[node name="mqttbroker" type="Label" parent="."]
layout_mode = 0
offset_left = 49.5398
offset_top = 20.3145
offset_right = 122.54
offset_bottom = 34.3145
text = "MQTT host:"

[node name="LineEdit" type="LineEdit" parent="mqttbroker"]
layout_mode = 0
offset_left = 90.0
offset_top = -5.0
offset_right = 245.0
offset_bottom = 19.0
tooltip_text = "The MQTT broker"
text = "test.mosquitto.org"

[node name="port" type="LineEdit" parent="mqttbroker"]
layout_mode = 0
offset_left = 253.94
offset_top = -6.0
offset_right = 365.94
offset_bottom = 18.0
tooltip_text = "The MQTT broker"
text = "8080"

[node name="usewebsocket" type="CheckBox" parent="mqttbroker"]
layout_mode = 0
offset_left = 372.37
offset_top = -6.19426
offset_right = 522.37
offset_bottom = 24.8057
text = "use websockets"

[node name="usessl" type="CheckBox" parent="mqttbroker"]
layout_mode = 0
offset_left = 301.386
offset_top = 28.4707
offset_right = 437.386
offset_bottom = 59.4707
tooltip_text = "Not implemented"
disabled = true
text = "use ssl"

[node name="roottopic" type="Label" parent="."]
layout_mode = 0
offset_left = 55.3657
offset_top = 56.305
offset_right = 168.366
offset_bottom = 73.305
text = "MQTT root topic: "

[node name="LineEdit" type="LineEdit" parent="roottopic"]
layout_mode = 0
offset_left = 129.617
offset_top = -7.31639
offset_right = 274.617
offset_bottom = 16.6836
tooltip_text = "Unique room number to set the same as your remote friend."
text = "crumble77"

[node name="mqttconnect" type="Button" parent="."]
layout_mode = 0
offset_left = 441.466
offset_top = 87.3283
offset_right = 561.466
offset_bottom = 118.328
tooltip_text = "Click here when your MQTT settings are correct"
toggle_mode = true
text = "MQTT connect"

[node name="local_id" type="Label" parent="."]
layout_mode = 0
offset_left = 58.6002
offset_top = 92.575
offset_right = 114.6
offset_bottom = 106.575
text = "Local ID:"

[node name="OptionButton" type="OptionButton" parent="local_id"]
layout_mode = 0
offset_left = 64.6414
offset_top = -5.42063
offset_right = 164.641
offset_bottom = 25.5794
tooltip_text = "Needs to be different to your remote friend"
item_count = 2
selected = 0
popup/item_0/text = "dog111"
popup/item_0/id = 0
popup/item_1/text = "cat222"
popup/item_1/id = 1

[node name="hintmessage" type="Label" parent="local_id"]
layout_mode = 0
offset_left = 127.08
offset_top = 24.5649
offset_right = 398.08
offset_bottom = 38.5649
text = "^ must be different from friend's local_id !!!"

[node name="remote_id" type="Label" parent="."]
layout_mode = 0
offset_left = 247.163
offset_top = 92.7551
offset_right = 324.163
offset_bottom = 106.755
text = "Remote ID:"

[node name="OptionButton" type="OptionButton" parent="remote_id"]
layout_mode = 0
offset_left = 86.6185
offset_top = -5.32101
offset_right = 186.618
offset_bottom = 25.679
disabled = true
item_count = 2
selected = 1
popup/item_0/text = "dog111"
popup/item_0/id = 0
popup/item_1/text = "cat222"
popup/item_1/id = 1

[node name="msg_pub" type="Label" parent="."]
layout_mode = 0
offset_left = 32.9494
offset_top = 148.581
offset_right = 111.95
offset_bottom = 196.581
text = "Published
MQTT
messages:"

[node name="TextEdit" type="TextEdit" parent="msg_pub"]
layout_mode = 0
offset_left = 90.0
offset_top = -3.0
offset_right = 553.0
offset_bottom = 81.0
text = "..."

[node name="msg_sub" type="Label" parent="."]
layout_mode = 0
offset_left = 31.1797
offset_top = 239.318
offset_right = 110.18
offset_bottom = 279.318
text = "Subscribed
MQTT
messages:"

[node name="TextEdit" type="TextEdit" parent="msg_sub"]
layout_mode = 0
offset_left = 91.0
offset_top = -4.0
offset_right = 558.0
offset_bottom = 78.0
text = "...."

[node name="MQTTchat" type="Label" parent="."]
layout_mode = 0
offset_left = 3.05948
offset_top = 331.216
offset_right = 80.0595
offset_bottom = 351.216
text = "MQTT chat"

[node name="chatmsg" type="LineEdit" parent="MQTTchat"]
layout_mode = 0
offset_left = 87.1784
offset_top = -2.94055
offset_right = 302.178
offset_bottom = 21.0594

[node name="chatsend" type="Button" parent="MQTTchat"]
layout_mode = 0
offset_left = 311.535
offset_top = -3.05939
offset_right = 399.535
offset_bottom = 16.9406
disabled = true
text = "MQTT send:"

[node name="chatrec" type="LineEdit" parent="MQTTchat"]
layout_mode = 0
offset_left = 417.416
offset_top = -3.17841
offset_right = 587.416
offset_bottom = 27.8216
tooltip_text = "Message from remote friend"
editable = false

[node name="ice_candidates" type="Label" parent="."]
layout_mode = 0
offset_left = 11.6865
offset_top = 538.842
offset_right = 122.687
offset_bottom = 642.842
text = "Interactive 
Connectivity
Establishment
   candidates:"

[node name="TextEdit" type="TextEdit" parent="ice_candidates"]
layout_mode = 0
offset_left = 129.0
offset_top = 1.0
offset_right = 584.0
offset_bottom = 99.0
text = "...."

[node name="local_sdp" type="Label" parent="."]
layout_mode = 0
offset_left = 12.5322
offset_top = 424.414
offset_right = 230.532
offset_bottom = 455.414
text = "local Session Description Protocol
"

[node name="TextEdit" type="TextEdit" parent="local_sdp"]
layout_mode = 0
offset_left = -5.0
offset_top = 24.0
offset_right = 276.0
offset_bottom = 102.0
text = "..."

[node name="remote_sdp" type="Label" parent="."]
layout_mode = 0
offset_left = 319.685
offset_top = 418.425
offset_right = 600.685
offset_bottom = 449.425
text = "remote Session Description Protocol
"

[node name="TextEdit" type="TextEdit" parent="remote_sdp"]
layout_mode = 0
offset_left = -8.0
offset_top = 30.0
offset_right = 278.0
offset_bottom = 108.0
text = "..."

[node name="webrtcconnect" type="Button" parent="."]
layout_mode = 0
offset_left = 11.9977
offset_top = 395.749
offset_right = 130.998
offset_bottom = 415.749
toggle_mode = true
text = "WebRTC connect"

[node name="Label" type="Label" parent="webrtcconnect"]
layout_mode = 0
offset_left = 140.243
offset_top = 3.0
offset_right = 272.243
offset_bottom = 23.0
text = "<--- creates the offer"

[node name="WebRTCchat" type="Label" parent="."]
layout_mode = 0
offset_left = 13.3484
offset_top = 658.076
offset_right = 100.348
offset_bottom = 672.076
text = "WebRTC chat:"

[node name="chatmsg" type="LineEdit" parent="WebRTCchat"]
layout_mode = 0
offset_left = 109.0
offset_top = 1.0
offset_right = 284.0
offset_bottom = 32.0

[node name="chatsend" type="Button" parent="WebRTCchat"]
layout_mode = 0
offset_left = 293.049
offset_top = 1.92402
offset_right = 407.049
offset_bottom = 32.924
disabled = true
text = "WebRTC send"

[node name="chatrec" type="LineEdit" parent="WebRTCchat"]
layout_mode = 0
offset_left = 412.3
offset_top = 2.14362
offset_right = 580.3
offset_bottom = 33.1436
tooltip_text = "message from remote friend"
editable = false

[node name="testlatency" type="Label" parent="."]
layout_mode = 0
offset_left = 11.3484
offset_top = 696.076
offset_right = 92.3484
offset_bottom = 710.076
text = "Test latency:"

[node name="testsize" type="OptionButton" parent="testlatency"]
layout_mode = 0
offset_left = 98.0
offset_top = 2.0
offset_right = 154.0
offset_bottom = 22.0

[node name="testwebrtc" type="Button" parent="testlatency"]
layout_mode = 0
offset_left = 163.0
offset_top = -3.0
offset_right = 259.0
offset_bottom = 28.0
disabled = true
text = "by webrtc"

[node name="testmqtt" type="Button" parent="testlatency"]
layout_mode = 0
offset_left = 271.652
offset_top = -0.796936
offset_right = 370.652
offset_bottom = 30.2031
disabled = true
text = "by mqtt"

[node name="latencyreport" type="LineEdit" parent="testlatency"]
layout_mode = 0
offset_left = 386.0
offset_top = -3.0
offset_right = 583.0
offset_bottom = 28.0

[node name="credits" type="Label" parent="."]
layout_mode = 0
offset_left = 33.5084
offset_top = 724.492
offset_right = 308.508
offset_bottom = 738.492
text = "code at: https://github.com/goatchurchprime/godot_webrtc_mqtt"
